--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "rate-limiter-flexible": "^5.0.4",
     "validator": "^13.12.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0"
   }
 }
